--- a/src/app/modules/users/components/user-page/user-page.component.html
+++ b/src/app/modules/users/components/user-page/user-page.component.html
@@ -1,7 +1,49 @@
 <app-page-header>{{ user?.firstName }} {{ user?.lastName }}</app-page-header>
 
 <div class="container mt-5 mb-5" *ngIf="user; else dataLoading">
-  <app-user-profile-page [user]="user"></app-user-profile-page>
+  <div class="row" *ngIf="user">
+    <div class="col-sm-3">
+      <div class="card card-body">
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            <div class="small text-muted">Email</div>
+            <div class="small">
+              {{ user.email ?? "-" }}
+            </div>
+          </li>
+
+          <li class="list-group-item" *ngIf="!user.emailConfirmed">
+            <div class="small text-muted">Email подтвержден</div>
+            <div class="">
+              <span class="badge bg-warning text-dark">Not confirmed</span>
+            </div>
+          </li>
+
+          <li class="list-group-item" *ngIf="user.deletedAt">
+            <div class="small text-muted">Статус</div>
+            <div class="">
+              <span class="badge bg-danger text-light">Удален</span>
+            </div>
+          </li>
+
+          <li class="list-group-item">
+            <div class="small text-muted">Роли</div>
+            <div>
+              <app-user-roles-label
+                [userRoles]="user.roles"
+              ></app-user-roles-label>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="col-sm-9">
+      <div class="card card-body">
+        <div class="text-muted">Пока работаем над этим.</div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <ng-template #dataLoading>
