--- a/src/app/modules/salaries/components/grades-min-max-salaries-chart/grades-min-max-chart.component.html
+++ b/src/app/modules/salaries/components/grades-min-max-salaries-chart/grades-min-max-chart.component.html
@@ -8,6 +8,12 @@
   </div>
 
   <div class="fst-italic text-muted">
-    Черные точки - это значения зарплаты, которые встречаются в выборке.
+    <div>
+      Черные точки - это значения зарплаты, которые встречаются в выборке.
+    </div>
+    <div>
+      Для графика зарплаты были отсортированы по значению, а затем отсечены
+      первые и последние 10% элементов.
+    </div>
   </div>
 </div>
