--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -413,19 +413,13 @@
       <div class="mt-5 mb-5">
         <app-salaries-by-grades-chart
           [chart]="salariesChart.salariesByMoneyBarChart"
-          [salaries]="salariesChart.salariesPerProfessionForLocal"
-          [professions]="professions"
-        >
-        </app-salaries-by-grades-chart>
+          [salaries]="salariesChart.salariesPerProfessionForLocal" />
       </div>
 
       <div class="mt-5 mb-5" *ngIf="salariesChart.hasRemoteSalaries">
         <app-salaries-by-grades-chart
           [chart]="salariesChart.salariesByMoneyBarChartForRemote"
-          [salaries]="salariesChart.salariesPerProfessionForRemote"
-          [professions]="professions"
-        >
-        </app-salaries-by-grades-chart>
+          [salaries]="salariesChart.salariesPerProfessionForRemote" />
       </div>
 
       <div *ngIf="shouldShowSurveyBlock" class="mt-3 mb-5">
