--- a/src/app/modules/salaries/components/salaries-by-grades-chart/salaries-by-grades-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-by-grades-chart/salaries-by-grades-chart.component.html
@@ -7,5 +7,9 @@
         <canvas [attr.id]="canvasId">{{ chartDataLocal }}</canvas>
       </div>
     </div>
+    <div class="small text-muted fst-italic">
+      Для графика использованы 90% анкет. Первые 5% и последние 5% не
+      учитываются.
+    </div>
   </div>
 </div>
