--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -301,22 +301,36 @@
       </div>
 
       <div class="mt-5 mb-5">
-        <div class="h4">Зарплаты по грейдам в таблицах</div>
-        <div class="row mt-3">
-          <div class="col-md-6 mb-3">
-            <div class="h5 mb-2">Казахстан</div>
+        <div class="h4">Зарплаты в Казахстанских компаниях</div>
+
+        <div class="mt-3">
+          <div>
             <app-salaries-by-grade-block
               [chart]="salariesChart"
               [showLocal]="true"
             ></app-salaries-by-grade-block>
           </div>
-          <div class="col-md-6 mb-3">
-            <div class="h5 mb-2">Удаленка</div>
-            <app-salaries-by-grade-block
-              [chart]="salariesChart"
-              [showLocal]="false"
-            ></app-salaries-by-grade-block>
+
+          <div class="mt-3">
+            <app-salaries-by-grades-chart
+              [chart]="salariesChart.salariesByMoneyBarChart"
+            />
           </div>
+        </div>
+      </div>
+
+      <div class="mt-5 mb-5" *ngIf="salariesChart.hasRemoteSalaries">
+        <div class="h4">Зарплаты валютных удаленщиков</div>
+        <div class="mt-3">
+          <app-salaries-by-grade-block
+            [chart]="salariesChart"
+            [showLocal]="false"
+          ></app-salaries-by-grade-block>
+        </div>
+        <div class="mt-3">
+          <app-salaries-by-grades-chart
+            [chart]="salariesChart.salariesByMoneyBarChartForRemote"
+          />
         </div>
       </div>
 
@@ -397,35 +411,6 @@
           [source]="salariesChart"
           (editSalaryActionClick)="openEditSalaryAction()"
         ></app-people-by-experience-chart>
-      </div>
-    </div>
-  </div>
-
-  <div
-    class="card mt-5"
-    *ngIf="!showDataStub && salariesChart.salariesByMoneyBarChart"
-  >
-    <div class="card-body py-5 px-5">
-      <div class="mb-5 display-4">
-        <span>Сравнение зарплат и специализаций</span>
-      </div>
-
-      <div class="mt-5 mb-5">
-        <app-salaries-by-grades-chart
-          [chart]="salariesChart.salariesByMoneyBarChart"
-          [salaries]="salariesChart.salariesPerProfessionForLocal" />
-      </div>
-
-      <div class="mt-5 mb-5" *ngIf="salariesChart.hasRemoteSalaries">
-        <app-salaries-by-grades-chart
-          [chart]="salariesChart.salariesByMoneyBarChartForRemote"
-          [salaries]="salariesChart.salariesPerProfessionForRemote" />
-      </div>
-
-      <div *ngIf="shouldShowSurveyBlock" class="mt-3 mb-5">
-        <app-salaries-survey-block
-          (closeButtonClick)="closeSurveyBlock()"
-        ></app-salaries-survey-block>
       </div>
     </div>
   </div>
