--- a/src/app/modules/salaries/components/salaries-by-experience-chart/salaries-by-experience-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-by-experience-chart/salaries-by-experience-chart.component.html
@@ -2,7 +2,8 @@
   <div class="h4 mb-3">Зарплаты по опыту работы респондента</div>
 
   <div class="fst-italic">
-    График показывает медиану и среднюю зарплату по опыту работы респондентов (сгруппировано по годам)
+    График показывает медиану и среднюю зарплату по опыту работы респондентов
+    (сгруппировано по годам)
   </div>
 
   <div class="mt-5" *ngIf="canvasIdLocal">
@@ -18,5 +19,4 @@
       <canvas [attr.id]="canvasIdRemote">{{ chartDataRemote }}</canvas>
     </div>
   </div>
-
 </div>
