--- a/src/app/modules/salaries/components/people-by-gender-chart/people-by-gender-chart.component.html
+++ b/src/app/modules/salaries/components/people-by-gender-chart/people-by-gender-chart.component.html
@@ -1,59 +1,71 @@
 <div class="">
   <div class="h4 mb-3">Гендер респондента в таблицах</div>
 
-  <div class="row">
-    <div class="col-md-6 mb-2" *ngIf="barsForLocal.length > 0">
-      <div class="h5 mb-2">Казахстан</div>
-      <div>
-        <table class="table table-hover table-sm">
-          <thead>
-            <tr>
-              <th scope="col">Гендер</th>
-              <th scope="col">Кол-во анкет</th>
-              <th scope="col">Доля</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let item of barsForLocal" class="small">
-              <td>{{ item.label }}</td>
-              <td>{{ item.value | formatAsMoney : 0 }}</td>
-              <td>{{ item.part | formatAsMoney : 3 }}%</td>
-            </tr>
-            <tr class="small">
-              <td class="text-muted">Всего</td>
-              <td>{{ totalCountLocal | formatAsMoney : 0 }}</td>
-              <td></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+  <div class="mb-2" *ngIf="barsForLocal.length > 0">
+    <div class="h5 mb-2">Казахстанские компании</div>
+    <div>
+      <table class="table table-hover table-sm">
+        <thead>
+          <tr>
+            <th scope="col">Гендер</th>
+            <th scope="col">Кол-во анкет</th>
+            <th scope="col">Доля</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of barsForLocal" class="small">
+            <td>{{ item.label }}</td>
+            <td>{{ item.value | formatAsMoney : 0 }}</td>
+            <td>{{ item.part | formatAsMoney : 3 }}%</td>
+          </tr>
+          <tr class="small">
+            <td class="text-muted">Всего</td>
+            <td>{{ totalCountLocal | formatAsMoney : 0 }}</td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
-    <div class="col-md-6 mb-2" *ngIf="barsForRemote.length > 0">
-      <div class="h5 mb-2">Удаленка</div>
-      <div>
-        <table class="table table-hover table-sm">
-          <thead>
-            <tr>
-              <th scope="col">Гендер</th>
-              <th scope="col">Кол-во анкет</th>
-              <th scope="col">Доля</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let item of barsForRemote" class="small">
-              <td>{{ item.label }}</td>
-              <td>{{ item.value }}</td>
-              <td>{{ item.part | number : "1.3" }}%</td>
-            </tr>
-            <tr class="small">
-              <td class="text-muted">Всего</td>
-              <td>{{ totalCountRemote }}</td>
-              <td></td>
-            </tr>
-          </tbody>
-        </table>
+    <div class="mt-2" *ngIf="salariesByGenderChartForLocal != null">
+      <div class="fst-italic">
+        График показывает средние зарплаты по гендеру и грейду респондента
       </div>
+      <app-salaries-by-gender-chart [source]="salariesByGenderChartForLocal" />
+    </div>
+  </div>
+
+  <div class="mt-3" *ngIf="barsForRemote.length > 0">
+    <div class="h5 mb-2">Валютная удаленка</div>
+    <div>
+      <table class="table table-hover table-sm">
+        <thead>
+          <tr>
+            <th scope="col">Гендер</th>
+            <th scope="col">Кол-во анкет</th>
+            <th scope="col">Доля</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of barsForRemote" class="small">
+            <td>{{ item.label }}</td>
+            <td>{{ item.value }}</td>
+            <td>{{ item.part | number : "1.3" }}%</td>
+          </tr>
+          <tr class="small">
+            <td class="text-muted">Всего</td>
+            <td>{{ totalCountRemote }}</td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="mt-2" *ngIf="salariesByGenderChartForRemote != null">
+      <div class="fst-italic">
+        График показывает средние зарплаты по гендеру и грейду респондента
+      </div>
+      <app-salaries-by-gender-chart [source]="salariesByGenderChartForRemote" />
     </div>
   </div>
 
