--- a/src/app/modules/salaries/components/cities-doughnut-chart/cities-doughnut-chart.component.html
+++ b/src/app/modules/salaries/components/cities-doughnut-chart/cities-doughnut-chart.component.html
@@ -36,9 +36,8 @@
         else hasCityInSalary
       "
     >
-      <div>Вы пока не указали город проживания.</div>
-      <div>
-        Уточнить данные
+      <div class="alert alert-warning p-3">
+        Вы пока не указали город проживания. Уточнить данные
         <button
           type="button"
           class="btn-link-sm fst-italic font-weight-normal"
