--- a/src/app/modules/salaries/components/people-by-gender-chart/people-by-gender-chart.component.html
+++ b/src/app/modules/salaries/components/people-by-gender-chart/people-by-gender-chart.component.html
@@ -1,6 +1,25 @@
 <div class="">
   <div class="h4 mb-3">Гендер респондента в таблицах</div>
 
+  <div
+    class="mt-1 fst-italic"
+    *ngIf="
+      currentSalary != null && currentSalary.gender == null;
+      else hasGenderInSalary
+    "
+  >
+    <div class="alert alert-warning p-3">
+      Вы пока не указали ваш пол. Уточнить данные
+      <button
+        type="button"
+        class="btn-link-sm fst-italic font-weight-normal"
+        (click)="openEditSalaryAction()"
+      >
+        можно тут
+      </button>
+    </div>
+  </div>
+
   <div class="mb-2" *ngIf="barsForLocal.length > 0">
     <div class="h5 mb-2">Казахстанские компании</div>
     <div>
@@ -28,14 +47,14 @@
     </div>
 
     <div class="mt-2" *ngIf="salariesByGenderChartForLocal != null">
-      <div class="fst-italic">
+      <app-salaries-by-gender-chart [source]="salariesByGenderChartForLocal" />
+      <div class="mt-1 fst-italic">
         График показывает средние зарплаты по гендеру и грейду респондента
       </div>
-      <app-salaries-by-gender-chart [source]="salariesByGenderChartForLocal" />
     </div>
   </div>
 
-  <div class="mt-3" *ngIf="barsForRemote.length > 0">
+  <div class="mt-5" *ngIf="barsForRemote.length > 0">
     <div class="h5 mb-2">Валютная удаленка</div>
     <div>
       <table class="table table-hover table-sm">
@@ -62,10 +81,10 @@
     </div>
 
     <div class="mt-2" *ngIf="salariesByGenderChartForRemote != null">
-      <div class="fst-italic">
+      <app-salaries-by-gender-chart [source]="salariesByGenderChartForRemote" />
+      <div class="mt-1 fst-italic">
         График показывает средние зарплаты по гендеру и грейду респондента
       </div>
-      <app-salaries-by-gender-chart [source]="salariesByGenderChartForRemote" />
     </div>
   </div>
 
@@ -76,9 +95,8 @@
       else hasGenderInSalary
     "
   >
-    <div>Вы пока не указали ваш пол.</div>
-    <div>
-      Уточнить данные
+    <div class="alert alert-warning p-3">
+      Вы пока не указали ваш пол. Уточнить данные
       <button
         type="button"
         class="btn-link-sm fst-italic font-weight-normal"
