--- a/src/app/modules/salaries/components/salaries-skills-chart/salaries-skills-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-skills-chart/salaries-skills-chart.component.html
@@ -31,9 +31,8 @@
       else hasSkillInSalary
     "
   >
-    <div>Вы пока не указали ваш основной ЯП/фреймворк.</div>
-    <div>
-      Уточнить данные
+    <div class="alert alert-warning p-3">
+      Вы пока не указали ваш основной ЯП/фреймворк. Уточнить данные
       <button
         type="button"
         class="btn-link-sm fst-italic font-weight-normal"
