--- a/src/app/modules/salaries/components/work-industries-chart/work-industries-chart.component.html
+++ b/src/app/modules/salaries/components/work-industries-chart/work-industries-chart.component.html
@@ -30,9 +30,8 @@
       else hasSkillInSalary
     "
   >
-    <div>Вы пока не указали сферу деятельности вашей компании.</div>
-    <div>
-      Уточнить данные
+    <div class="alert alert-warning p-3">
+      Вы пока не указали сферу деятельности вашей компании. Уточнить данные
       <button
         type="button"
         class="btn-link-sm fst-italic font-weight-normal"
