--- a/src/styles.scss
+++ b/src/styles.scss
@@ -121,6 +121,22 @@ ul.no-bullets {
   }
 }
 
+.mt-7 {
+  margin-top: 3.75rem;
+}
+
+.mt-8 {
+  margin-top: 4rem;
+}
+
+.mt-9 {
+  margin-top: 4.5rem;
+}
+
+.mt-10 {
+  margin-top: 5.5rem;
+}
+
 /* ng-select bootstrap-like styles. Start */
 /* https://github.com/ng-select/ng-select/issues/1955#issuecomment-1240459808 */
 /*.form-floating {
