--- a/src/app/modules/admin/components/generate-qr-code-page/generate-qr-page.component.html
+++ b/src/app/modules/admin/components/generate-qr-code-page/generate-qr-page.component.html
@@ -8,7 +8,7 @@
           type="text"
           [(ngModel)]="qrCodeSource"
           class="form-control"
-          placeholder="Enter TOTP code"
+          placeholder="Введите любой текст"
         />
       </div>
       <div class="mb-3">
@@ -17,7 +17,7 @@
           class="btn btn-primary"
           (click)="generateQrCode()"
         >
-          Generate QR
+          Сгенерировать QR
         </button>
       </div>
     </div>
