--- a/src/app/modules/salaries/components/people-by-age-chart/people-by-age-chart.component.html
+++ b/src/app/modules/salaries/components/people-by-age-chart/people-by-age-chart.component.html
@@ -16,9 +16,8 @@
       else hasCityInSalary
     "
   >
-    <div>Вы пока не указали свой возраст.</div>
-    <div>
-      Уточнить данные
+    <div class="alert alert-warning p-3">
+      Вы пока не указали свой возраст. Уточнить данные
       <button
         type="button"
         class="btn-link-sm fst-italic font-weight-normal"
