--- a/src/app/modules/salaries/components/people-by-experience-chart/people-by-experience-chart.component.html
+++ b/src/app/modules/salaries/components/people-by-experience-chart/people-by-experience-chart.component.html
@@ -18,9 +18,8 @@
       else hasCityInSalary
     "
   >
-    <div>Вы пока не указали свой опыт.</div>
-    <div>
-      Уточнить данные
+    <div class="alert alert-warning p-3">
+      Вы пока не указали свой опыт. Уточнить данные
       <button
         type="button"
         class="btn-link-sm fst-italic font-weight-normal"
