Added page and step

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -137,6 +137,11 @@ ul.no-bullets {
   margin-top: 5.5rem;
 }
 
+.px-10 {
+  padding-left: 5.5rem;
+  padding-right: 5.5rem;
+}
+
 /* ng-select bootstrap-like styles. Start */
 /* https://github.com/ng-select/ng-select/issues/1955#issuecomment-1240459808 */
 /*.form-floating {
