--- a/src/app/modules/salaries/components/add-salary/add-salary.component.html
+++ b/src/app/modules/salaries/components/add-salary/add-salary.component.html
@@ -1,226 +1,260 @@
-<div class="modal d-block" tabindex="-1" role="dialog">
-  <div class="modal-dialog custom-alert modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <span class="h3 modal-title">Добавьте свою зарплату</span>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-          (click)="close()"
-        ></button>
-      </div>
+<app-page-header>Добавьте свою зарплату</app-page-header>
 
-      <div class="modal-body">
-        <div class="p-2">
-          <div class="my-1 mb-3">
-            Для того, чтобы просматривать график зарплат, вам нужно сначала
-            внести свою. График открывается, только если среди данных есть ваша
-            зарплата за последний год.
-          </div>
-
-          <hr class="mb-3" />
-
-          <form
-            *ngIf="addSalaryForm"
-            [formGroup]="addSalaryForm"
-            (ngSubmit)="addSalarySubmitAction()"
-          >
-            <div class="mb-3">
-              <label
-                >Зарплата в тенге <strong>в месяц</strong> "на руки". Если вы
-                получаете в иной валюте, переведите в тенге.</label
-              >
-              <input
-                formControlName="value"
-                type="text"
-                class="form-control form-control-lg"
-                appOnlyNumber
-              />
-              <app-field-error
-                [field]="addSalaryForm.get('value')"
-                [max]="10000000"
-                [min]="75000"
-              ></app-field-error>
-            </div>
-
-            <div class="mb-3">
-              <div class="row mb-1">
-                <div class="col-6">
-                  <label>Квартал</label>
-                  <input
-                    formControlName="quarter"
-                    type="text"
-                    class="form-control"
-                  />
-                  <app-field-error
-                    [field]="addSalaryForm.get('quarter')"
-                    [max]="4"
-                    [min]="1"
-                  ></app-field-error>
-                </div>
-
-                <div class="col-6">
-                  <label>Год</label>
-                  <input
-                    formControlName="year"
-                    type="text"
-                    class="form-control"
-                  />
-                  <app-field-error
-                    [field]="addSalaryForm.get('year')"
-                    [max]="2000"
-                    [min]="2100"
-                  ></app-field-error>
-                </div>
-              </div>
-
-              <div class="text-muted fst-italic">
-                <div>
-                  Квартал и год необходим для того, чтобы в статистике учитывать
-                  только актуальные данные.
-                </div>
-                <div>
-                  Указывая 1 квартал 2024го года, вы говорите, что в первом
-                  квартале этого года у вас <strong>в месяц</strong> была такая
-                  зарплата.
-                </div>
-                <div>
-                  В статистике учитываются зарплаты за текущий и предыдущий год.
-                </div>
-              </div>
-            </div>
-
-            <div class="mb-3">
-              <select
-                formControlName="company"
-                class="form-select"
-                aria-label="Select a company"
-              >
-                <option [value]="null" selected disabled>
-                  Работаете в казахстанской компании или иностранной
-                </option>
-                <option
-                  *ngFor="let option of companyTypes"
-                  [value]="option.value"
-                >
-                  {{ option.label }}
-                </option>
-              </select>
-              <app-field-error
-                [field]="addSalaryForm.get('company')"
-              ></app-field-error>
-            </div>
-
-            <div class="mb-3">
-              <label class="text-sm">Ваша специализация</label>
-              <ng-select
-                [items]="professionsAsOptions"
-                [selectOnTab]="true"
-                bindLabel="label"
-                bindValue="item"
-                placeholder="Выберите вашу специальность"
-                appendTo=""
-                formControlName="profession"
-              >
-              </ng-select>
-              <app-field-error
-                [field]="addSalaryForm.get('profession')"
-              ></app-field-error>
-            </div>
-
-            <div class="mb-3">
-              <div><label class="">Ваш грейд</label></div>
-              <select
-                formControlName="grade"
-                class="form-select"
-                aria-label="Select your grade"
-              >
-                <option [value]="null" selected disabled>Выберите грейд</option>
-                <option *ngFor="let option of grades" [value]="option.value">
-                  {{ option.label }}
-                </option>
-              </select>
-              <app-field-error
-                [field]="addSalaryForm.get('grade')"
-              ></app-field-error>
-            </div>
-
-            <div class="mb-3" *ngIf="skillsAsOptions.length > 0">
-              <label class="text-sm"
-                >Ваш основной фреймворк или язык программирования</label
-              >
-              <ng-select
-                [items]="skillsAsOptions"
-                [selectOnTab]="true"
-                bindLabel="label"
-                bindValue="item"
-                placeholder="Выберите ваш ЯП или фреймворк. Можно оставить пустым."
-                appendTo=""
-                formControlName="skillId"
-              >
-              </ng-select>
-              <app-field-error
-                [field]="addSalaryForm.get('skillId')"
-              ></app-field-error>
-            </div>
-
-            <div class="mb-3" *ngIf="industriesAsOptions.length > 0">
-              <label class="text-sm">Сфера, где вы работаете</label>
-              <ng-select
-                [items]="industriesAsOptions"
-                [selectOnTab]="true"
-                bindLabel="label"
-                bindValue="item"
-                placeholder="Выберите сферу, где работаете"
-                appendTo=""
-                formControlName="workIndustryId"
-              >
-              </ng-select>
-              <app-field-error
-                [field]="addSalaryForm.get('workIndustryId')"
-              ></app-field-error>
-            </div>
-
-            <div class="mb-3">
-              <div>
-                <label class="">В каком городе Казахстана Вы живете?</label>
-              </div>
-              <ng-select
-                [items]="cities"
-                [selectOnTab]="true"
-                bindLabel="label"
-                bindValue="item"
-                placeholder="Выберите город"
-                appendTo=""
-                formControlName="city"
-              >
-              </ng-select>
-              <app-field-error
-                [field]="addSalaryForm.get('city')"
-              ></app-field-error>
-            </div>
-
-            <div *ngIf="errorMessage" class="mb-3 alert alert-danger">
-              {{ errorMessage }}
-            </div>
-
-            <div class="mb-3 fst-italic">
-              Отправляя данные, вы соглашаетесь, что
-              <strong>обезличенная</strong> зарплата будет учтена при рассчетах
-              и составлении графиков. Мы гарантируем, что конфиденциальность
-              ваших данных будет соблюдена.
-            </div>
-
-            <div class="mb-3 pt-2">
-              <button class="btn btn-primary btn-lg w-100" type="submit">
-                Добавить
-              </button>
-            </div>
-          </form>
+<div class="my-5 container">
+  <div class="card">
+    <div class="card-body py-5 px-10">
+      <div class="mb-5 mt-1">
+        <div class="mb-1 text-muted small fst-italic">
+          Для того, чтобы просматривать график зарплат, вам нужно сначала
+          внести свою. График открывается, только если среди данных есть ваша
+          зарплата за последний год.
+        </div>
+        <div class="fst-italic text-muted small">
+          Отправляя данные, вы соглашаетесь, что
+          <strong>обезличенная</strong> зарплата будет учтена при рассчетах
+          и составлении графиков. Мы гарантируем, что конфиденциальность
+          ваших данных будет соблюдена.
         </div>
       </div>
+    
+      <form
+        *ngIf="addSalaryForm"
+        [formGroup]="addSalaryForm"
+        (ngSubmit)="addSalarySubmitAction()"
+      >
+
+        <div class="" *ngIf="currentStep === 1">
+          <div class="mb-3 progress">
+            <div class="progress-bar progress-bar-striped bg-info text-dark" role="progressbar" style="width: 33%;" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100">1</div>
+          </div>
+
+          <div class="mb-3">
+            <label
+              >Зарплата в тенге <strong>в месяц</strong> "на руки". Если вы
+              получаете в иной валюте, переведите в тенге.</label
+            >
+            <input
+              formControlName="value"
+              type="text"
+              class="form-control form-control-lg"
+              appOnlyNumber
+            />
+            <app-field-error
+              [field]="addSalaryForm.get('value')"
+              [max]="10000000"
+              [min]="75000"
+            ></app-field-error>
+          </div>
+      
+          <div class="mb-3">
+            <div class="row mb-1">
+              <div class="col-6">
+                <label>Квартал</label>
+                <input
+                  formControlName="quarter"
+                  type="text"
+                  class="form-control"
+                />
+                <app-field-error
+                  [field]="addSalaryForm.get('quarter')"
+                  [max]="4"
+                  [min]="1"
+                ></app-field-error>
+              </div>
+      
+              <div class="col-6">
+                <label>Год</label>
+                <input
+                  formControlName="year"
+                  type="text"
+                  class="form-control"
+                />
+                <app-field-error
+                  [field]="addSalaryForm.get('year')"
+                  [max]="2000"
+                  [min]="2100"
+                ></app-field-error>
+              </div>
+            </div>
+      
+            <div class="text-muted fst-italic small">
+              <div>
+                Квартал и год необходим для того, чтобы в статистике учитывать
+                только актуальные данные.
+              </div>
+              <div>
+                Указывая 1 квартал 2025го года, вы говорите, что в первом
+                квартале этого года у вас <strong>в месяц</strong> была такая
+                зарплата.
+              </div>
+              <div>
+                В статистике учитываются зарплаты за текущий и предыдущий год.
+              </div>
+            </div>
+          </div>
+      
+          <div class="mb-3">
+            <select
+              formControlName="company"
+              class="form-select"
+              aria-label="Select a company"
+            >
+              <option [value]="null" selected disabled>
+                Работаете в казахстанской компании или иностранной
+              </option>
+              <option
+                *ngFor="let option of companyTypes"
+                [value]="option.value"
+              >
+                {{ option.label }}
+              </option>
+            </select>
+            <app-field-error
+              [field]="addSalaryForm.get('company')"
+            ></app-field-error>
+          </div>
+      
+          <div class="mb-3">
+            <label class="text-sm">Ваша специализация</label>
+            <ng-select
+              [items]="professionsAsOptions"
+              [selectOnTab]="true"
+              bindLabel="label"
+              bindValue="item"
+              placeholder="Выберите вашу специальность"
+              appendTo=""
+              formControlName="profession"
+            >
+            </ng-select>
+            <app-field-error
+              [field]="addSalaryForm.get('profession')"
+            ></app-field-error>
+          </div>
+
+          <div class="row">
+            <div class="col-6"></div>
+            <div class="col-6">
+              <button class="btn btn-outline-primary btn-lg w-100 py-3" type="button" (click)="nextStep()">
+                Далее
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="" *ngIf="currentStep === 2">
+          <div class="mb-3 progress">
+            <div class="progress-bar progress-bar-striped bg-info text-dark" role="progressbar" style="width: 66%;" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100">2</div>
+          </div>
+
+          <div class="mb-3">
+            <div><label class="">Ваш грейд</label></div>
+            <select
+              formControlName="grade"
+              class="form-select"
+              aria-label="Select your grade"
+            >
+              <option [value]="null" selected disabled>Выберите грейд</option>
+              <option *ngFor="let option of grades" [value]="option.value">
+                {{ option.label }}
+              </option>
+            </select>
+            <app-field-error
+              [field]="addSalaryForm.get('grade')"
+            ></app-field-error>
+          </div>
+      
+          <div class="mb-3" *ngIf="skillsAsOptions.length > 0">
+            <label class="text-sm"
+              >Ваш основной фреймворк или язык программирования</label
+            >
+            <ng-select
+              [items]="skillsAsOptions"
+              [selectOnTab]="true"
+              bindLabel="label"
+              bindValue="item"
+              placeholder="Выберите ваш ЯП или фреймворк. Можно оставить пустым."
+              appendTo=""
+              formControlName="skillId"
+            >
+            </ng-select>
+            <app-field-error
+              [field]="addSalaryForm.get('skillId')"
+            ></app-field-error>
+          </div>
+      
+          <div class="mb-3" *ngIf="industriesAsOptions.length > 0">
+            <label class="text-sm">Сфера, где вы работаете</label>
+            <ng-select
+              [items]="industriesAsOptions"
+              [selectOnTab]="true"
+              bindLabel="label"
+              bindValue="item"
+              placeholder="Выберите сферу, где работаете"
+              appendTo=""
+              formControlName="workIndustryId"
+            >
+            </ng-select>
+            <app-field-error
+              [field]="addSalaryForm.get('workIndustryId')"
+            ></app-field-error>
+          </div>
+      
+          <div class="mb-3">
+            <div>
+              <label class="">В каком городе Казахстана Вы живете?</label>
+            </div>
+            <ng-select
+              [items]="cities"
+              [selectOnTab]="true"
+              bindLabel="label"
+              bindValue="item"
+              placeholder="Выберите город"
+              appendTo=""
+              formControlName="city"
+            >
+            </ng-select>
+            <app-field-error
+              [field]="addSalaryForm.get('city')"
+            ></app-field-error>
+          </div>
+
+          <div class="row">
+            <div class="col-6">
+              <button class="btn btn-outline-secondary btn-lg w-100 py-3" type="button" (click)="previousStep()">
+                Назад
+              </button>
+            </div>
+            <div class="col-6">
+              <button class="btn btn-outline-primary btn-lg w-100 py-3" type="button" (click)="nextStep()">
+                Далее
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="" *ngIf="currentStep === 3">
+          <div class="mb-3 progress">
+            <div class="progress-bar progress-bar-striped bg-info text-dark" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">3</div>
+          </div>
+
+          <div class="row">
+            <div class="col-6">
+              <button class="btn btn-outline-secondary btn-lg w-100 py-3" type="button" (click)="previousStep()">
+                Назад
+              </button>
+            </div>
+            <div class="col-6">
+              <button class="btn btn-primary btn-lg w-100 py-3" type="submit">
+                Отправить
+              </button>
+            </div>
+          </div>
+        </div>
+    
+        <div *ngIf="errorMessage" class="mb-3 alert alert-danger">
+          {{ errorMessage }}
+        </div>
+      </form>
     </div>
   </div>
 </div>
