--- a/src/app/modules/salaries/components/add-salary/add-salary.component.html
+++ b/src/app/modules/salaries/components/add-salary/add-salary.component.html
@@ -301,7 +301,9 @@
                 {{ option.label }}
               </option>
             </select>
-            <app-field-error [field]="addSalaryForm.get('gender')"></app-field-error>
+            <app-field-error
+              [field]="addSalaryForm.get('gender')"
+            ></app-field-error>
           </div>
 
           <div class="mb-3">
