--- a/src/app/modules/salaries/components/salaries-chart/usefulness-rating/usefulness-rating.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/usefulness-rating/usefulness-rating.component.html
@@ -4,13 +4,18 @@
     <span class="h5">Вы уже оценили этот отчет. Спасибо за оценку!</span>
   </div>
 
-  <div class="" *ngIf="currentMode === 'ShowRatingBlock'">
-    <div class="mb-3">
-      Была ли вам полезна информация в зарплатном отчете?
+  <div class="card" *ngIf="currentMode === 'ShowRatingBlock'">
+    <div class="card-body p-5">
+      <div class="mb-3">
+        <div class="h5 mb-1">Была ли вам полезна информация в зарплатном отчете?</div>
+        <div class="text-muted">
+          Оценка важна для нас, чтобы улучшить качество отчетов и графиков.
+        </div>
+      </div>
+      <app-star-rating
+        [maxValue]="5"
+        (ratingChange)="ratingChanged($event)" />
     </div>
-    <app-star-rating
-      [maxValue]="5"
-      (ratingChange)="ratingChanged($event)" />
   </div>
 
   <div class="alert alert-success p-5" *ngIf="currentMode === 'ShowSuccessBlock'">
