--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -410,8 +410,7 @@
   </div>
 
   <div class="cart mt-5" *ngIf="!salariesChart.hasRecentSurveyReply">
-    <app-usefulness-rating
-      [source]="salariesChart" />
+    <app-usefulness-rating [source]="salariesChart" />
   </div>
 
   <div
