--- a/src/app/shared/components/star-rating/star-rating.component.html
+++ b/src/app/shared/components/star-rating/star-rating.component.html
@@ -1,9 +1,12 @@
 <!-- star-rating.component.html -->
 <div class="star-rating">
-  <i 
+  <i
     *ngFor="let star of stars; let index = index"
-    class="star cursor-pointer bi {{ star.filled ? 'bi-star-fill' : 'bi-star' }}" 
+    class="star cursor-pointer bi {{
+      star.filled ? 'bi-star-fill' : 'bi-star'
+    }}"
     (click)="setRating(star)"
     (mouseover)="hoverRating(star)"
-    (mouseleave)="leaveRating()"></i>
+    (mouseleave)="leaveRating()"
+  ></i>
 </div>
